Fixing search result titles clipping

--- a/styles/search.scss
+++ b/styles/search.scss
@@ -18,6 +18,9 @@
 .gsc-url-top {
 	padding:0 0 8px;
 	}
+.gs-title {
+	height:1.4em !important;
+	}
 .gs-title,
 .gs-title b,
 .gsc-cursor-page {
